--- a/_events/2020-09-30-vatner.md
+++ b/_events/2020-09-30-vatner.md
@@ -5,7 +5,7 @@ authors:
 event_title: 'Jonathan Vatner'
 description: "Hue Magazine staff writer, Jonathan Vatner, talks about his book,
 Carnegie Hill"
-location: To be held virtually (link/registration forthcoming)
+location: WebEx Event (link forthcoming). Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application.
 time: 5pm - 6pm
 image: vatner-event.jpg
 author-image: vatner.jpg
