--- a/_events/2020-10-14-kiper.md
+++ b/_events/2020-10-14-kiper.md
@@ -5,7 +5,7 @@ authors:
 event_title: 'Anna Kiper'
 description: "Assistant Professor Anna Kiper talks about her book,
 Fashion Portfolio: Design + Presentation"
-location: To be held virtually (link/registration forthcoming)
+location: WebEx Event (link forthcoming). Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application.
 time: 5pm - 6pm
 image: kiper-event.jpg
 author-image: kiper.jpg
