--- a/_events/2020-09-30-vatner.md
+++ b/_events/2020-09-30-vatner.md
@@ -5,7 +5,8 @@ authors:
 event_title: 'Jonathan Vatner'
 description: "Hue Magazine staff writer, Jonathan Vatner, talks about his book,
 Carnegie Hill"
-location: WebEx Event (link forthcoming). Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application.
+location: WebEx Event (link forthcoming)
+event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
 image: vatner-event.jpg
 author-image: vatner.jpg
