--- a/_events/2020-09-30-vatner.md
+++ b/_events/2020-09-30-vatner.md
@@ -3,7 +3,7 @@ layout: event
 authors:
   - Jonathan Vatner
 event_title: 'Jonathan Vatner'
-description: "Hue Magazine staff writer, Jonathan Vatner, talks about his book,
+description: "Hue Magazine Managing Editor, Jonathan Vatner, talks about his book,
 Carnegie Hill"
 location: WebEx Event (link forthcoming)
 event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
