--- a/_events/2020-09-30-vatner.md
+++ b/_events/2020-09-30-vatner.md
@@ -5,7 +5,9 @@ authors:
 event_title: 'Jonathan Vatner'
 description: "Hue Magazine Managing Editor, Jonathan Vatner, talks about his book,
 Carnegie Hill"
-location: WebEx Event (link forthcoming)
+location: |
+  [WebEx Event](https://fitnyc.webex.com/fitnyc/onstage/g.php?MTID=e7c4ab3989c4b9d6657bb64fcb0d4a6d0)
+
 event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
 image: vatner-event.jpg
