--- a/_events/2020-10-28-kiper.md
+++ b/_events/2020-10-28-kiper.md
@@ -5,7 +5,9 @@ authors:
 event_title: 'Anna Kiper'
 description: "Assistant Professor Anna Kiper talks about her book,
 Fashion Portfolio: Design + Presentation"
-location: WebEx Event (link forthcoming)
+location: |
+  [WebEx Event](https://fitnyc.webex.com/fitnyc/onstage/g.php?MTID=e9612f912d5c8419655ceb1326ab57dc1)
+
 event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
 image: kiper-event.jpg
