--- a/_events/2021-03-24-cowan.md
+++ b/_events/2021-03-24-cowan.md
@@ -5,7 +5,7 @@ authors:
 event_title: 'Brenda Cowan'
 description: "Associate Professor Brenda Cowan talks about her book, Museum Objects, Health and Healing"
 location: |
-  [Webex Event](https://www.google.com/url?q=https://fitnyc.webex.com/fitnyc/onstage/g.php?MTID%3De3684f4ee745b8161a42ce14db86e0380&sa=D&source=calendar&ust=1615385754285000&usg=AOvVaw06_yd3-527RFvscwt1bLbc)
+  [Webex Event](https://fitnyc.webex.com/fitnyc/j.php?MTID=m13b8976d1d2533702dd4afb463320e05)
 
 event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
