--- a/_events/2021-10-27-pyun.md
+++ b/_events/2021-10-27-pyun.md
@@ -6,6 +6,7 @@ event_title: 'Kyunghee Pyun'
 description: "Associate Professor Kyunghee Pyun talks about her book, Fashion, Identity, and Power in Modern Asia"
 location: |
   [Webex Event](https://fitnyc.webex.com/fitnyc/j.php?MTID=m0723851ccdf8c62e1a2aa7b65b288999)
+  [RSVP](https://events.eventzilla.net/e/fit-authors-talk-fashion-identity-and-power-in-modern-asia-2138828830)
 
 event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
