--- a/_events/2022-04-26-way.md
+++ b/_events/2022-04-26-way.md
@@ -5,7 +5,7 @@ authors:
 event_title: 'Elizabeth Way'
 description: "Museum at FIT Associate Curator Elizabeth Way talks about her book, Black Designers in American Fashion"
 location: |
-  WebEx event link forthcoming
+  [Webex Event](https://fitnyc.webex.com/fitnyc/j.php?MTID=me417d5807d8b176c28d9172b0babd260)
 
 event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
