--- a/_events/2022-09-21-covey.md
+++ b/_events/2022-09-21-covey.md
@@ -5,7 +5,7 @@ authors:
 event_title: 'Sylvie Covey'
 description: "Adjunct Assistant Professor Sylvie Covey talks about her book, Modern Printmaking: A Guide to Traditional and Digital Techniques"
 location: |
-  WebEx event link forthcoming
+  [Webex Event](https://fitnyc.webex.com/fitnyc/j.php?MTID=mfabe53c86504977dc7da161480857eee)
 
 event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
