--- a/_events/2023-03-29-martin.md
+++ b/_events/2023-03-29-martin.md
@@ -1,8 +1,8 @@
 ---
 layout: event
 authors:
-  - Dr. Chloe M. Martin
-event_title: 'Dr. Chloe M. Martin'
+  - Chloe M. Martin
+event_title: 'Chloe M. Martin'
 description: "Assistant Professor Chloe M. Martin talks about her forthcoming article and research, The Impact of Social Support on Psychological Distress Among Black Breast Cancer Survivors: The Mediating Role of Fear of Recurrence"
 location: |
   WebEx Event (link forthcoming)
