--- a/_events/2023-03-29-martin.md
+++ b/_events/2023-03-29-martin.md
@@ -11,4 +11,4 @@ event_details: Viewers do not need an account with WebEx to access this event. A
 time: 5pm - 6pm
 image: martin.jpg
 ---
-Dr. Martin's research examines the effect of social support (SS) on psychological distress (depression and anxiety) among Black breast cancer survivors (BBCS), and the possible mediating effect of fear of recurrence (FOR) on this relationship. The manuscript is being finalized for submission to the _Journal of Cancer Survivorship_.
+Dr. Martin's research examines the effect of social support (SS) on psychological distress (depression and anxiety) among Black breast cancer survivors (BBCS), and the possible mediating effect of fear of recurrence (FOR) on this relationship. The manuscript has been received by the _Journal of Cancer Survivorship_.
