--- a/_events/2023-04-26-davidson.md
+++ b/_events/2023-04-26-davidson.md
@@ -5,7 +5,8 @@ authors:
 event_title: 'Hilary Davidson'
 description: "Associate Professor and Chair of Fashion and Textile Studies, Hilary Davidson, talks about her books, Dress in the Age of Jane Austen and Jane Austen's Wardrobe"
 location: |
-  WebEx Event (link forthcoming)
+  [RSVP](https://events.eventzilla.net/e/fit-authors-talks-hilary-davidson-2138594677)  
+  [Watch Live on WebEx](https://fitnyc.webex.com/fitnyc/j.php?MTID=mfba25e47d33400b4e1851c1415aaee94)
 
 event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
