--- a/_events/2024-10-24-babcock.md
+++ b/_events/2024-10-24-babcock.md
@@ -5,7 +5,7 @@ authors:
 event_title: 'Jennifer Miyuki Babcock'
 description: "Adjunct Assistant Professor Jennifer Miyuki Babcock talks about her book, Ancient Egyptian Fables: Tree Climbing Hippos and Ennobled Mice."
 location: |
-  Video link forthcoming
+  [Watch Live on WebEx](https://fitnyc.webex.com/fitnyc/j.php?MTID=m7cc26fbd12eb6ab8faaf3648cde73eca)
 event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
 image: babcock-event.jpg
