--- a/_events/2021-09-23-narvaez.md
+++ b/_events/2021-09-23-narvaez.md
@@ -5,9 +5,9 @@ authors:
 event_title: 'Richie Narvaez'
 description: "Adjunct Assistant Professor Richie Narvaez talks about his book, Hipster Death Rattle"
 location: |
-  [Webex Event](https://fitnyc.webex.com/fitnyc/j.php?MTID=m2f1d70149e5ae909e8faee9a56807a3f)
+  [Watch recording on Archive on Demand](https://archiveondemand.fitnyc.edu/item/26332)
 
-event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
+# event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
 image: narvaez-event.jpg
 ---
