--- a/_events/2022-02-16-cole.md
+++ b/_events/2022-02-16-cole.md
@@ -6,9 +6,9 @@ authors:
 event_title: 'Daniel James Cole and Nancy Deihl'
 description: "Adjunct Assistant Professor Daniel James Cole and NYU Assistant Professor Nancy Deihl talks about their book, The History of Modern Fashion"
 location: |
-  [Webex Event](https://fitnyc.webex.com/fitnyc/j.php?MTID=m93f36264a2eb8092e21895fe77aa0612)
+  [Watch recording on Archive on Demand](https://archiveondemand.fitnyc.edu/item/26339)
 
-event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
+# event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
 image: cole-event.jpg
 ---
