--- a/_events/2022-11-17-schwartz.md
+++ b/_events/2022-11-17-schwartz.md
@@ -5,9 +5,9 @@ authors:
 event_title: 'Alexandra Schwartz'
 description: "Adjunct Professor Alexandra Schwartz talks about her book, Garmenting: Costume as Contemporary Art"
 location: |
-  [WebEx Event](https://fitnyc.webex.com/fitnyc/j.php?MTID=m996a38b11a51fbfd9e10b8daba571026)
+  [Watch recording on Archive on Demand](https://archiveondemand.fitnyc.edu/item/26316)
 
-event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
+# event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
 image: schwartz-event.jpg
 ---
