--- a/_events/2023-02-28-gooptu.md
+++ b/_events/2023-02-28-gooptu.md
@@ -5,9 +5,9 @@ authors:
 event_title: 'Subhalakshmi Gooptu'
 description: "Assistant Professor of World Literature Subhalakshmi Gooptu talks about her article, Watery Archives: Transoceanic Narratives in Andil Gosine’s Our Holy Waters, and Mine"
 location: |
-  [WebEx Event](https://fitnyc.webex.com/fitnyc/j.php?MTID=m16162f24c9af18b442afe2f82eceddbb)
+  [Watch recording on Archive on Demand](https://archiveondemand.fitnyc.edu/item/118567)
 
-event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
+# event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
 image: gooptu-event.jpg
 ---
