--- a/_events/2024-09-25-wilbekin.md
+++ b/_events/2024-09-25-wilbekin.md
@@ -5,8 +5,8 @@ authors:
 event_title: 'Emil Wilbekin'
 description: "Assistant Professor Emil Wilbekin talks about his career in fashion and journalism"
 location: |
-  [Watch Live on WebEx](https://fitnyc.webex.com/fitnyc/j.php?MTID=m201550dea40837af9fb4010150a913b2)
-event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
+  [Watch recording on Archive on Demand](https://archiveondemand.fitnyc.edu/item/398667)
+# event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
 image: wilbekin-event.png
 ---
