--- a/_events/2021-03-24-cowan.md
+++ b/_events/2021-03-24-cowan.md
@@ -5,9 +5,9 @@ authors:
 event_title: 'Brenda Cowan'
 description: "Associate Professor Brenda Cowan talks about her book, Museum Objects, Health and Healing"
 location: |
-  [Webex Event](https://fitnyc.webex.com/fitnyc/j.php?MTID=m13b8976d1d2533702dd4afb463320e05)
+  [Watch recording on Archive on Demand](https://archiveondemand.fitnyc.edu/item/26307)
 
-event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
+# event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
 image: cowan-event.jpg
 author-image: cowan.jpg
