--- a/_events/2022-03-29-lemmon.md
+++ b/_events/2022-03-29-lemmon.md
@@ -5,9 +5,9 @@ authors:
 event_title: 'Amy Lemmon'
 description: "Professor and Chair of English and Communication Studies Amy Lemmon talks about her book, The Miracles"
 location: |
-  [Webex Event](https://fitnyc.webex.com/fitnyc/j.php?MTID=m3408ceb3a359d48fb5a869639e8f7b0f)
+  [Watch recording on Archive on Demand](https://archiveondemand.fitnyc.edu/item/26313)
 
-event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
+# event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
 image: lemmon-event.jpg
 ---
