--- a/_events/2022-04-26-way.md
+++ b/_events/2022-04-26-way.md
@@ -5,9 +5,9 @@ authors:
 event_title: 'Elizabeth Way'
 description: "Museum at FIT Associate Curator Elizabeth Way talks about her book, Black Designers in American Fashion"
 location: |
-  [Webex Event](https://fitnyc.webex.com/fitnyc/j.php?MTID=me417d5807d8b176c28d9172b0babd260)
+  [Watch recording on Archive on Demand](https://archiveondemand.fitnyc.edu/item/26323)
 
-event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
+# event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
 image: way-event.jpg
 ---
