--- a/_events/2022-10-27-goldberg.md
+++ b/_events/2022-10-27-goldberg.md
@@ -5,9 +5,9 @@ authors:
 event_title: 'K. Meira Goldberg'
 description: "Adjunct Associate Professor K. Meira Goldberg talks about her book, Sonidos Negros: On the Blackness of Flamenco"
 location: |
-  [WebEx Event](https://fitnyc.webex.com/fitnyc/j.php?MTID=m455819bd876ace5f0e3bf495b28c0261)
+  [Watch recording on Archive on Demand](https://archiveondemand.fitnyc.edu/item/26329)
 
-event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
+# event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
 image: goldberg-event.jpg
 ---
