--- a/_events/2023-11-15-horvath.md
+++ b/_events/2023-11-15-horvath.md
@@ -5,9 +5,9 @@ authors:
 event_title: 'Delphine Horvath'
 description: "Assistant Professor Delphine Horvath talks about her book, Cosmetics Marketing: Strategy and Innovation in the Beauty Industry"
 location: |
-  [Watch Live on WebEx](https://fitnyc.webex.com/fitnyc/j.php?MTID=me8812b57a969212c7751d8b27952e7e1)
+  [Watch recording on Archive on Demand](https://archiveondemand.fitnyc.edu/item/152122)
 
-event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
+# event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
 image: horvath-event.jpg
 ---
