--- a/_events/2024-03-19-nagel.md
+++ b/_events/2024-03-19-nagel.md
@@ -5,9 +5,9 @@ authors:
 event_title: 'Alexander Nagel'
 description: "Assistant Professor Alexander Nagel talks about his book, Color and Meaning in the Art of Achaemenid Persia"
 location: |
-  [Watch Live on WebEx](https://fitnyc.webex.com/fitnyc/j.php?MTID=mc6a6d3e150f66ae4a90b9de553195b1d)
+  [Watch recording on Archive on Demand](https://archiveondemand.fitnyc.edu/item/248973)
 
-event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
+# event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
 image: nagel-event.jpg
 ---
