--- a/_events/2023-03-29-martin.md
+++ b/_events/2023-03-29-martin.md
@@ -4,11 +4,11 @@ authors:
   - Chloe M. Martin
 event_title: 'Chloe M. Martin'
 description: "Assistant Professor Chloe M. Martin talks about her forthcoming article and research, The Impact of Social Support on Psychological Distress Among Black Breast Cancer Survivors: The Mediating Role of Fear of Recurrence"
-location: |
-  [RSVP](https://events.eventzilla.net/e/fit-authors-talk-chloe-martin-2138596363)  
-  [Watch Live on WebEx](https://fitnyc.webex.com/fitnyc/j.php?MTID=mf97bb3724f815588d4a56a24aee44ab3)
+# location: |
+#   [RSVP](https://events.eventzilla.net/e/fit-authors-talk-chloe-martin-2138596363)  
+#   [Watch Live on WebEx](https://fitnyc.webex.com/fitnyc/j.php?MTID=mf97bb3724f815588d4a56a24aee44ab3)
 
-event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
+# event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
 image: martin.jpg
 ---
