--- a/_events/2024-11-20-king.md
+++ b/_events/2024-11-20-king.md
@@ -5,8 +5,8 @@ authors:
 event_title: 'Kenneth D. King'
 description: "Adjunct Assistant Professor Kenneth D. King talks about his book, Doll Couture: Creating Custom Clothes Featuring the Story of Lola."
 location: |
-  [Watch Live on WebEx](https://fitnyc.webex.com/fitnyc/j.php?MTID=mf4d6df614c9dbe1cad3bd36359f3b6fe)
-event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
+  [Watch recording on Archive on Demand](https://archiveondemand.fitnyc.edu/item/465317)
+# event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
 image: king-event.jpg
 ---
