--- a/_events/2023-09-21-kawamura.md
+++ b/_events/2023-09-21-kawamura.md
@@ -4,11 +4,11 @@ authors:
   - Yuniya (Yuni) Kawamura
 event_title: 'Yuniya Kawamura'
 description: "Professor Yuniya Kawamura talks about her book, Fashion-ology: Fashion Studies in the Postmodern Digital Era"
-location: |
-  [RSVP](https://events.eventzilla.net/e/fit-authors-talks-fashionology-2138616566) 
-  [Watch Live on WebEx](https://fitnyc.webex.com/fitnyc/j.php?MTID=m818be6214bf11c24c04218184ed9200e)
+# location: |
+#   [RSVP](https://events.eventzilla.net/e/fit-authors-talks-fashionology-2138616566) 
+#   [Watch Live on WebEx](https://fitnyc.webex.com/fitnyc/j.php?MTID=m818be6214bf11c24c04218184ed9200e)
 
-event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
+# event_details: Viewers do not need an account with WebEx to access this event. After clicking the link, the event can be viewed either through your web browser or by downloading the WebEx desktop application. If this is your first time using WebEx, please plan on joining the event several minutes before the starting time to troubleshoot any issues.
 time: 5pm - 6pm
 image: kawamura-event.jpg
 ---
