add youtube links

--- a/_events/2025-09-18-amato.md
+++ b/_events/2025-09-18-amato.md
@@ -5,7 +5,7 @@ authors:
 event_title: 'Ron Amato'
 description: "Ron Amato talks about his book, Artists of Provincetown."
 location: |
-  [Google Meet Event](https://meet.google.com/bey-jcxt-qfx)
+  [Watch recording on Archive on Demand](https://archiveondemand.fitnyc.edu/item/653840)
 time: 5pm - 6pm
 image: amato-2-event.jpg
 ---
